--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 02:14:00 PM</p>
+    <p class="lastupdate">09/04/2020 02:19:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">100.0&#176;F</td>
+        <td class="data">100.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">100.0&#176;F</td>
+        <td class="data">100.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">100.0&#176;F</td>
+        <td class="data">100.5&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.3&#176;F</td>
+        <td class="data">46.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">17%</td>
+        <td class="data">16%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.874 inHg (-0.063)</td>
+        <td class="data">29.872 inHg (-0.065)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph ENE (68&#176;)</td>
+        <td class="data">7 mph N (0&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.0&#176;F</td>
+        <td class="data">79.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:08:26 PM">
-            100.1</span><br/>
+          <span title="02:18:32 PM">
+            100.5</span><br/>
           <span title="06:35:33 AM">
             54.9</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:08:26 PM" class="hival">
-            100.1</span>
+          <span title="02:18:32 PM" class="hival">
+            100.5</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:40:23 PM (Thursday)" class="hival">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:05:02 AM">
             29.967</span><br/>
-          <span title="02:07:02 PM">
-            29.874</span>
+          <span title="02:18:02 PM">
+            29.872</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -444,7 +444,7 @@
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          188
+          187
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:07:02 PM">
-            79.0</span><br/>
+          <span title="02:15:02 PM">
+            79.1</span><br/>
           <span title="06:35:01 AM">
             68.0</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">90%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 23 hours, 27 minutes</td>
+      <td class="data">2 days, 23 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 23 hours, 27 minutes</td>
+      <td class="data">2 days, 23 hours, 32 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
