--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 02:34:00 PM</p>
+    <p class="lastupdate">09/04/2020 02:39:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,19 +50,19 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">100.0&#176;F</td>
+        <td class="data">99.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">100.0&#176;F</td>
+        <td class="data">99.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">100.0&#176;F</td>
+        <td class="data">99.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.3&#176;F</td>
+        <td class="data">47.1&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
@@ -70,11 +70,11 @@
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.863 inHg (-0.068)</td>
+        <td class="data">29.862 inHg (-0.067)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">5 mph N (0&#176;)</td>
+        <td class="data">5 mph NNE (22&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.3&#176;F</td>
+        <td class="data">79.4&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -444,7 +444,7 @@
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          187
+          188
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:25:02 PM">
-            79.3</span><br/>
+          <span title="02:35:02 PM">
+            79.4</span><br/>
           <span title="06:35:01 AM">
             68.0</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">98%</td>
+      <td class="data">100%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">2 days, 23 hours, 47 minutes</td>
+      <td class="data">2 days, 23 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">2 days, 23 hours, 47 minutes</td>
+      <td class="data">2 days, 23 hours, 52 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
