--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 02:49:00 PM</p>
+    <p class="lastupdate">09/04/2020 02:54:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">101.1&#176;F</td>
+        <td class="data">100.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">101.1&#176;F</td>
+        <td class="data">100.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">101.1&#176;F</td>
+        <td class="data">100.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">46.6&#176;F</td>
+        <td class="data">47.9&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">16%</td>
+        <td class="data">17%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.857 inHg (-0.070)</td>
+        <td class="data">29.857 inHg (-0.069)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">4 mph NNE (22&#176;)</td>
+        <td class="data">1 mph ENE (68&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">79.6&#176;F</td>
+        <td class="data">79.7&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,8 +153,8 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:48:36 PM">
-            101.1</span><br/>
+          <span title="02:49:26 PM">
+            101.2</span><br/>
           <span title="06:35:33 AM">
             54.9</span>
         </td>
@@ -187,8 +187,8 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:48:36 PM" class="hival">
-            101.1</span>
+          <span title="02:49:26 PM" class="hival">
+            101.2</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="04:40:23 PM (Thursday)" class="hival">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:05:02 AM">
             29.967</span><br/>
-          <span title="02:48:02 PM">
-            29.857</span>
+          <span title="02:52:02 PM">
+            29.854</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -444,7 +444,7 @@
         </td>
         <td class="data new_row hilo_week">
           1<br/>
-          187
+          188
         </td>
         <td class="data new_row hilo_month">
           0<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:44:02 PM">
-            79.6</span><br/>
+          <span title="02:51:02 PM">
+            79.7</span><br/>
           <span title="06:35:01 AM">
             68.0</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">100%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 0 hours, 2 minutes</td>
+      <td class="data">3 days, 0 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 0 hours, 2 minutes</td>
+      <td class="data">3 days, 0 hours, 7 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
