--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 <div id="title_bar">
   <div id="title">
     <h1 class="page_title">Olivehill</h1>
-    <p class="lastupdate">09/04/2020 03:09:00 PM</p>
+    <p class="lastupdate">09/04/2020 03:14:00 PM</p>
   </div>
   <div id="rss_link"><a href="rss.xml">RSS</a></div>
   <div id="reports">
@@ -50,31 +50,31 @@
     <tbody>
       <tr>
         <td class="label">Outside Temperature</td>
-        <td class="data">100.6&#176;F</td>
+        <td class="data">101.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Heat Index</td>
-        <td class="data">100.6&#176;F</td>
+        <td class="data">101.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Wind Chill</td>
-        <td class="data">100.6&#176;F</td>
+        <td class="data">101.6&#176;F</td>
       </tr>
       <tr>
         <td class="label">Dew Point</td>
-        <td class="data">47.8&#176;F</td>
+        <td class="data">47.0&#176;F</td>
       </tr>
       <tr>
         <td class="label">Humidity</td>
-        <td class="data">17%</td>
+        <td class="data">16%</td>
       </tr>
       <tr>
         <td class="label">Barometer</td>
-        <td class="data">29.854 inHg (-0.069)</td>
+        <td class="data">29.852 inHg (-0.066)</td>
       </tr>
       <tr>
         <td class="label">Wind</td>
-        <td class="data">2 mph NNE (22&#176;)</td>
+        <td class="data">2 mph W (270&#176;)</td>
       </tr>
       <tr>
         <td class="label">Rain Rate</td>
@@ -86,7 +86,7 @@
       </tr>
       <tr>
         <td class="label">Inside Temperature</td>
-        <td class="data">80.1&#176;F</td>
+        <td class="data">80.2&#176;F</td>
       </tr>
       <tr>
         <td class="label">Inside Humidity</td>
@@ -153,20 +153,20 @@
       <tr>
         <td class="label">Outside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="02:49:26 PM">
-            101.2</span><br/>
+          <span title="03:13:42 PM">
+            101.6</span><br/>
           <span title="06:35:33 AM">
             54.9</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:40:23 PM (Thursday)">
-            101.5</span><br/>
+          <span title="03:13:42 PM (Friday)">
+            101.6</span><br/>
           <span title="06:21:16 AM (Sunday)">
             49.7</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/03/2020 04:40:23 PM">
-            101.5</span><br/>
+          <span title="09/04/2020 03:13:42 PM">
+            101.6</span><br/>
           <span title="09/01/2020 06:47:50 AM">
             50.8</span>
         </td>
@@ -187,16 +187,16 @@
       <tr>
         <td class="label">Heat Index</td>
         <td class="data new_row hilo_day">
-          <span title="02:49:26 PM" class="hival">
-            101.2</span>
+          <span title="03:13:42 PM" class="hival">
+            101.6</span>
         </td>
         <td class="data new_row hilo_week">
-          <span title="04:40:23 PM (Thursday)" class="hival">
-            101.5</span>
+          <span title="03:13:42 PM (Friday)" class="hival">
+            101.6</span>
         </td>
         <td class="data new_row hilo_month">
-          <span title="09/03/2020 04:40:23 PM" class="hival">
-            101.5</span>
+          <span title="09/04/2020 03:13:42 PM" class="hival">
+            101.6</span>
         </td>
         <td class="data new_row hilo_year">
           <span title="08/16/2020 03:43:16 PM" class="hival">
@@ -305,8 +305,8 @@
         <td class="data new_row hilo_day">
           <span title="08:05:02 AM">
             29.967</span><br/>
-          <span title="03:01:02 PM">
-            29.853</span>
+          <span title="03:12:02 PM">
+            29.850</span>
         </td>
         <td class="data new_row hilo_week">
           <span title="09:40:02 AM (Wednesday)">
@@ -440,7 +440,7 @@
         </td>
         <td class="data new_row hilo_day">
           1<br/>
-          7
+          6
         </td>
         <td class="data new_row hilo_week">
           1<br/>
@@ -470,8 +470,8 @@
       <tr>
         <td class="label">Inside Temperature</td>
         <td class="data new_row hilo_day">
-          <span title="03:04:02 PM">
-            80.1</span><br/>
+          <span title="03:11:02 PM">
+            80.2</span><br/>
           <span title="06:35:01 AM">
             68.0</span>
         </td>
@@ -564,7 +564,7 @@
     <tr><th>Connectivity</th><th></th></tr>
     <tr>
       <td class="label">Signal Quality</td>
-      <td class="data">94%</td>
+      <td class="data">98%</td>
     </tr>
 
     <tr><th>Battery Status</th><th></th></tr>
@@ -610,11 +610,11 @@
     </tr>
     <tr>
       <td class="label">Server uptime</td>
-      <td class="data">3 days, 0 hours, 22 minutes</td>
+      <td class="data">3 days, 0 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX uptime</td>
-      <td class="data">3 days, 0 hours, 22 minutes</td>
+      <td class="data">3 days, 0 hours, 27 minutes</td>
     </tr>
     <tr>
       <td class="label">WeeWX version</td>
